Upgraded to BETA_JAVA9 (9155dfe5fa6)