@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2013 IBM Corporation and others.
+ * Copyright (c) 2000, 2016 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,6 +7,9 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
+ *     Stephan Herrmann - Contribution for
+ *								Bug 429813 - [1.8][dom ast] IMethodBinding#getJavaElement() should return IMethod for lambda
+ *								Bug 466308 - [hovering] Javadoc header for parameter is wrong with annotation-based null analysis
  *******************************************************************************/
 
 package org.eclipse.jdt.core.dom;
@@ -14,13 +17,10 @@ package org.eclipse.jdt.core.dom;
 import org.eclipse.jdt.core.IJavaElement;
 import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.util.IModifierConstants;
-import org.eclipse.jdt.internal.compiler.ast.AbstractMethodDeclaration;
-import org.eclipse.jdt.internal.compiler.ast.Initializer;
 import org.eclipse.jdt.internal.compiler.ast.TypeDeclaration;
 import org.eclipse.jdt.internal.compiler.classfmt.ClassFileConstants;
 import org.eclipse.jdt.internal.compiler.impl.Constant;
 import org.eclipse.jdt.internal.compiler.impl.ReferenceContext;
-import org.eclipse.jdt.internal.compiler.lookup.BlockScope;
 import org.eclipse.jdt.internal.compiler.lookup.FieldBinding;
 import org.eclipse.jdt.internal.compiler.lookup.LocalVariableBinding;
 import org.eclipse.jdt.internal.compiler.lookup.TagBits;
@@ -89,19 +89,19 @@ class VariableBinding implements IVariableBinding {
 			case TypeIds.T_boolean:
 				return Boolean.valueOf(c.booleanValue());
 			case TypeIds.T_byte:
-				return new Byte(c.byteValue());
+				return Byte.valueOf(c.byteValue());
 			case TypeIds.T_char:
-				return new Character(c.charValue());
+				return Character.valueOf(c.charValue());
 			case TypeIds.T_double:
 				return new Double(c.doubleValue());
 			case TypeIds.T_float:
 				return new Float(c.floatValue());
 			case TypeIds.T_int:
-				return new Integer(c.intValue());
+				return Integer.valueOf(c.intValue());
 			case TypeIds.T_long:
-				return new Long(c.longValue());
+				return Long.valueOf(c.longValue());
 			case TypeIds.T_short:
-				return new Short(c.shortValue());
+				return Short.valueOf(c.shortValue());
 			case TypeIds.T_JavaLangString:
 				return c.stringValue();
 		}
@@ -133,16 +133,9 @@ class VariableBinding implements IVariableBinding {
 				if (node == null) {
 					if (this.binding instanceof LocalVariableBinding) {
 						LocalVariableBinding localVariableBinding = (LocalVariableBinding) this.binding;
-						BlockScope blockScope = localVariableBinding.declaringScope;
-						if (blockScope != null) {
-							ReferenceContext referenceContext = blockScope.referenceContext();
-							if (referenceContext instanceof Initializer) {
-								return null;
-							}
-							if (referenceContext instanceof AbstractMethodDeclaration) {
-								return this.resolver.getMethodBinding(((AbstractMethodDeclaration) referenceContext).binding);
-							}
-						}
+						org.eclipse.jdt.internal.compiler.lookup.MethodBinding enclosingMethod = localVariableBinding.getEnclosingMethod();
+						if (enclosingMethod != null)
+							return this.resolver.getMethodBinding(enclosingMethod);
 					}
 					return null;
 				}
@@ -152,6 +145,9 @@ class VariableBinding implements IVariableBinding {
 					case ASTNode.METHOD_DECLARATION :
 						MethodDeclaration methodDeclaration = (MethodDeclaration) node;
 						return methodDeclaration.resolveBinding();
+					case ASTNode.LAMBDA_EXPRESSION :
+						LambdaExpression lambdaExpression = (LambdaExpression) node;
+						return lambdaExpression.resolveMethodBinding();
 					default:
 						node = node.getParent();
 				}
